src/header/Nav.scss
@import '../global-style-variables';

$btn-size:     2em;

%btn {
    font-size: $body-font-size;
    font-family: $sans-serif;
    background-color: $header-bg;
    border: none;
    border-color: $primary;
    border-radius: $border-radius;
    box-sizing: border-box;
    color: $body-color;
    cursor: pointer;
    display: inline-block;
    max-width: 100%;
    transition-property: border;
    transition-duration: 200ms;
    margin: -1em 1em 2em 0;
    padding: 0 $btn-size / 2;
    text-align: center;
    user-select: none;
    width: auto;
    position: relative;
    top: -($btn-size / 4);

    &:focus,
    &:active,
    &:link,
    &:hover {
        outline: 0;
    }

    &::-moz-focus-inner {
        border: 0;
    }
}

%btn--active {
    @extend %btn;

    border-bottom: 1px solid $primary;
}

.nav {
    height: $header-height;
    display: inline-block;

    .nav__btn {
        @extend %btn;

        &:hover {
            @extend %btn--active;
        }
    }

    .nav__btn--active {
        @extend %btn--active;
    }

    [type=button],
    [type=submit],
    button {
        @extend .nav__btn;
    }
}

